src/objects/Slot_Type_Desc__c.object
<CustomObject>
    <description>created based on csv file</description>
    <fields>
        <fullName>c_full_desc__c</fullName>
        <label>c_full_desc</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_group_desc__c</fullName>
        <label>c_group_desc</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_group_desc_long__c</fullName>
        <label>c_group_desc_long</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_manufacturer_abbrev__c</fullName>
        <label>c_manufacturer_abbrev</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <label>c_quality_cd</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_std_game_type__c</fullName>
        <label>c_std_game_type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_std_manufacturer__c</fullName>
        <label>c_std_manufacturer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_type_desc__c</fullName>
        <label>c_type_desc</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <label>d_timestamp</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Slot Type Desc</label>
    <nameField>
        <label>Slot Type Desc Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Slot Type Descs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>